css/freelancer.css
body {
  font-family: 'Poiret One', sans-serif;
}
.name-title {
    font-family: 'Amatic SC', cursive;
}
.name-company {
    font-family: 'Codystar', cursive;
    font-weight: 900;
    text-shadow: 2px 2px #070b17;
}
.name-by {
    font-family: 'Reenie Beanie', cursive;
    font-weight: 200;
}
.tagline {
    font-family: 'Patrick Hand', cursive;
}
.lead {
    padding-bottom: 4em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  font-family: 'Righteous', sans-serif;
}

hr.star-light,
hr.star-dark {
  max-width: 15rem;
  padding: 0;
  text-align: center;
  border: none;
  border-top: solid 0.25rem;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

hr.star-light:after,
hr.star-dark:after {
  position: relative;
  top: -.8em;
  display: inline-block;
  padding: 0 0.25em;
  content: '\f005';
  font-family: FontAwesome;
  font-size: 2em;
}

hr.star-light {
  border-color: #fff;
}

hr.star-light:after {
  color: #fff;
  background-color: #120000;
  border-radius: 200px;
}

hr.star-dark {
  border-color: #120000;
}

hr.star-dark:after {
  color: #120000;
  background-color: white;
}

section {
  padding: 6rem 0;
}

section h2 {
  font-size: 3rem;
  line-height: 3rem;
}

@media (min-width: 992px) {
  section h2 {
    font-size: 4.5rem;
    line-height: 2.5rem;
  }
}

.btn-xl {
  padding: 1rem 1.75rem;
  font-size: 1.25rem;
}

.btn-social {
  width: 3.25rem;
  height: 3.25rem;
  font-size: 1.25rem;
  line-height: 2rem;
}

.scroll-to-top {
  z-index: 1042;
  right: 1rem;
  bottom: 1rem;
  display: none;
}

.scroll-to-top a {
  width: 3.5rem;
  height: 3.5rem;
  background-color: rgba(33, 37, 41, 0.5);
  line-height: 3.1rem;
}

#mainNav {
  padding-top: 1rem;
  padding-bottom: 1rem;
  font-weight: 900;
  font-family: 'Codystar';
}

#mainNav .navbar-brand {
  color: #fff;
}

#mainNav .navbar-nav {
  margin-top: 1rem;
  letter-spacing: 0.0625rem;
}

#mainNav .navbar-nav li.nav-item a.nav-link {
  color: #fff;
}

#mainNav .navbar-nav li.nav-item a.nav-link:hover {
  color: #18BC9C;
}

#mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
  color: #fff;
}

#mainNav .navbar-nav li.nav-item a.nav-link.active {
  color: #18BC9C;
}

#mainNav .navbar-toggler {
  font-size: 80%;
  padding: 0.8rem;
}

@media (min-width: 992px) {
  #mainNav {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
    -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
    transition: padding-top 0.3s, padding-bottom 0.3s;
  }
  #mainNav .navbar-brand {
    font-size: 2em;
    -webkit-transition: font-size 0.3s;
    -moz-transition: font-size 0.3s;
    transition: font-size 0.3s;
  }
  #mainNav .navbar-nav {
    margin-top: 0;
  }
  #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
    color: #000;
    background: #ffa101;
  }
  #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
    color: #000;
    background: #18BC9C;
  }
  #mainNav.navbar-shrink {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
  }
  #mainNav.navbar-shrink .navbar-brand {
    font-size: 1.5em;
  }
}

.modal-dialog.cascading-modal.modal-avatar .modal-header {
    margin: -6rem 0 -1rem;
}

header.masthead {
  padding-top: calc(6rem + 72px);
  padding-bottom: 6rem;
}

header.masthead h1 {
  font-size: 1.7rem;
  line-height: 3rem;
}

header.masthead h2 {
  font-size: 1.1rem;
  font-family: 'Poiret One';
}

header.masthead img {
    width: 250px;
    height: 250px;
    border-radius: 270px;
}

@media (min-width: 992px) {
  header.masthead {
    padding-top: calc(3rem + 106px);
    padding-bottom: 6rem;
  }
  header.masthead h1 {
    font-size: 3em;
    line-height: 4.5rem;
  }
  header.masthead h2 {
    font-size: 1.8em;
  }
}

.start-popup-container {
  margin-top: 16em;
  margin-bottom: -16em;
}

.modal.show .modal-dialog {
    padding-top: 10em;
    max-width: 40em;
}

.modal-header {
    color: white;
}

.modal-header img {
    width: 15em;
    margin-right: 1em;
}

.modal-header h1 {
    padding-top: 3em;
    vertical-align: text-bottom;
    font-family: "Amatic SC", cursive;
}

.modal-body {
    background-color: #120000;
    color: white;
}

.modal-body button {
    background-color: #ffa101;
    color: black;
}

.modal-content {
    background-color: #120000;
}

.modal-body p{
    font-size: 1.5em;
}

.portfolio {
  margin-bottom: -15px;
}

.portfolio .portfolio-item {
  position: relative;
  display: block;
  max-width: 25rem;
  margin-bottom: 15px;
}

.portfolio .portfolio-item .portfolio-item-caption {
  -webkit-transition: all ease 0.5s;
  -moz-transition: all ease 0.5s;
  transition: all ease 0.5s;
  opacity: 0;
  background-color: rgba(255, 161, 1, 0.9);
}

.portfolio .portfolio-item .portfolio-item-caption:hover {
  opacity: 1;
}

.portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
  font-size: 1.5rem;
}

.portfolio p {
    text-align: center;
    color: black;
    font-size: 1.7em;
}

@media (min-width: 576px) {
  .portfolio {
    margin-bottom: -30px;
  }
  .portfolio .portfolio-item {
    margin-bottom: 30px;
  }
}

.portfolio-modal .portfolio-modal-dialog {
  padding: 3rem 1rem;
  min-height: calc(100vh - 2rem);
  margin: 1rem calc(1rem - 8px);
  position: relative;
  z-index: 2;
  -moz-box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
  -webkit-box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
  box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
}

.portfolio-modal .portfolio-modal-dialog .close-button {
  position: absolute;
  top: 2rem;
  right: 2rem;
}

.portfolio-modal .portfolio-modal-dialog .close-button i {
  line-height: 38px;
}

.portfolio-modal .portfolio-modal-dialog h2 {
  font-size: 2rem;
}

@media (min-width: 768px) {
  .portfolio-modal .portfolio-modal-dialog {
    min-height: 100vh;
    padding: 5rem;
    margin: 3rem calc(3rem - 8px);
  }
  .portfolio-modal .portfolio-modal-dialog h2 {
    font-size: 3rem;
  }
}

.floating-label-form-group {
  position: relative;
  border-bottom: 1px solid #e9ecef;
}

.floating-label-form-group input,
.floating-label-form-group textarea {
  font-size: 1.5em;
  position: relative;
  z-index: 1;
  padding-right: 0;
  padding-left: 0;
  resize: none;
  border: none;
  border-radius: 0;
  background: none;
  box-shadow: none !important;
}

.floating-label-form-group label {
  font-size: 0.85em;
  line-height: 1.764705882em;
  position: relative;
  z-index: 0;
  top: 2em;
  display: block;
  margin: 0;
  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
  -moz-transition: top 0.3s ease, opacity 0.3s ease;
  -ms-transition: top 0.3s ease, opacity 0.3s ease;
  transition: top 0.3s ease, opacity 0.3s ease;
  vertical-align: middle;
  vertical-align: baseline;
  opacity: 0;
}

.floating-label-form-group:not(:first-child) {
  padding-left: 14px;
  border-left: 1px solid #e9ecef;
}

.floating-label-form-group-with-value label {
  top: 0;
  opacity: 1;
}

.floating-label-form-group-with-focus label {
  color: #18BC9C;
}

form .row:first-child .floating-label-form-group {
  border-top: 1px solid #e9ecef;
}

.footer {
  padding-top: 5rem;
  padding-bottom: 5rem;
  background-color: #120000;
  color: #fff;
}

.copyright {
  background-color: #120000;
}

a {
  color: #18BC9C;
}

a:focus, a:hover, a:active {
  color: #128f76;
}

.form-control:focus {
  background-color: unset;
}

.btn {
  border-width: 2px;
}

.bg-solid-color {
    background-color: #120000;
}

.bg-primary {
    background-image: url('../img/background-primary.jpg');
    background-size: cover;
}

.bg-secondary {
  background-color: #120000 !important;
  opacity: 0.75;
}

.about-font {
    font-size: 1.3em;
}

.text-primary {
  color: #18BC9C !important;
}

.text-secondary {
  color: #120000 !important;
}

.btn-primary {
  background-color: #ffa101;
  border-color: #ffa101;
  color: black;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
  background-color: #ffa101;
  border-color: #ffa101;
}

.btn-secondary {
  background-color: #2C3E50;
  border-color: #2C3E50;
}

.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
  background-color: #1a252f;
  border-color: #1a252f;
}

@-webkit-keyframes zoom {
  from {
    -webkit-transform: scale(1, 1);
  }
  to {
    -webkit-transform: scale(1.08, 1.08);
  }
}

@keyframes zoom {
  from {
    transform: scale(1, 1);
  }
  to {
    transform: scale(1.08, 1.08);
  }
}

.carousel-inner .carousel-item > img {
  -webkit-animation: zoom 5s;
  animation: zoom 5s;
  min-width: auto;
  max-height: 30em;
  width: auto;
  object-fit: contain;
}

.carousel-control-prev-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23120000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
}

.carousel-control-next-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23120000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
}

.carousel-control-prev,
.carousel-control-next {
  opacity: 0.7 !important;
}

